// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalityArchetype renders component 1`] = `
<div>
  <div>
    <h2
      dangerouslySetInnerHTML={
        Object {
          "__html": "personality_heading, [object Object]",
        }
      }
    />
    <p>
      You can get lost in your work, appreciating the value of devoting expertise to the execution of a task. You are at ease working in your own way, on your own terms.
    </p>
  </div>
  <div>
    <p
      dangerouslySetInnerHTML={
        Object {
          "__html": "candidate_description_for_archetype_html, [object Object]",
        }
      }
    />
  </div>
</div>
`;

exports[`PersonalityArchetype renders component in third person 1`] = `
<div>
  <div>
    <div>
      <img
        alt="Cohort"
        src="https://cdn.traitify.com/frtq/conservative_white.png"
      />
      <div>
        <h2
          dangerouslySetInnerHTML={
            Object {
              "__html": "personality_heading, [object Object]",
            }
          }
        />
      </div>
    </div>
    <span>
      Maybe just hire qualified candidats
    </span>
  </div>
</div>
`;

exports[`PersonalityArchetype renders component with badge 1`] = `
<div>
  <div>
    <img
      alt="Cohort"
      src="https://cdn.traitify.com/frtq/conservative_white.png"
    />
    <h2
      dangerouslySetInnerHTML={
        Object {
          "__html": "personality_heading, [object Object]",
        }
      }
    />
    <p>
      You can get lost in your work, appreciating the value of devoting expertise to the execution of a task. You are at ease working in your own way, on your own terms.
    </p>
  </div>
  <div>
    <p
      dangerouslySetInnerHTML={
        Object {
          "__html": "candidate_description_for_archetype_html, [object Object]",
        }
      }
    />
  </div>
</div>
`;

exports[`PersonalityArchetype renders nothing if deck not ready 1`] = `null`;

exports[`PersonalityArchetype renders nothing if disabled 1`] = `null`;

exports[`PersonalityArchetype renders nothing if no archetype 1`] = `null`;

exports[`PersonalityArchetype renders nothing if results not ready 1`] = `null`;
